--- a/src/pages/Features/Feature.css
+++ b/src/pages/Features/Feature.css
@@ -2,20 +2,18 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.35);
     padding-bottom: 30px;
     gap: 5px;
 }
 
 .feature-card {
-    width: 210px;
+    width: 230px;
     padding: 20px;
-    margin: 10px;
+    margin: 20px;
     cursor: pointer;
     transition: transform 0.3s;
-    border: 1px solid transparent;
-}
+    /*border: 1px solid goldenrod;*/
+  }
 
 .feature-card:hover {
     border-color: goldenrod;
@@ -24,14 +22,17 @@
 
 .feature-icon-container {
     flex: 0 0 auto;
-    margin-right: 20px;
-    border-radius: 50%;
     overflow: hidden;
-    border: 2px solid goldenrod;
+    margin: 2px;
+    display: flex;
+    justify-content: center;
 }
 
 .feature-icon {
     width: 80px;
+    border-radius: 50%;
+    padding: 7px;
     height: 80px;
+    background-color: white;
     object-fit: cover;
 }
